--- a/client/src/index.css
+++ b/client/src/index.css
@@ -304,6 +304,69 @@ table button:hover {
   background-color: #774c05;
 }
 
+/*Profil*/
+
+.profile-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.profile-card {
+  background-color: #f4f4f4;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+  text-align: center;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.profile-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+  object-fit: cover;
+}
+
+.input-group {
+  margin-bottom: 15px;
+}
+
+.file-input-label {
+  display: block;
+  margin: 10px 0;
+}
+
+.profile-actions {
+  margin-top: 20px;
+}
+
+.btn-edit, .btn-save, .btn-cancel {
+  padding: 10px 15px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-edit {
+  background-color: #f39c10;
+  color: white;
+}
+
+.btn-save {
+  background-color: #f39c10;
+  color: white;
+}
+
+.btn-cancel {
+  background-color: #f39c10;
+  color: white;
+}
+
+
 /* Responzívny dizajn pre 768px - tablety */
 @media (max-width: 768px) {
 
